force-app/main/default/objects/Division_Plan_Forecast_Result__c/Division_Plan_Forecast_Result__c.object-meta.xml
<CustomObject>
    <description>. 사업부별(특히, 본사 전략마케팅실) 수주 계획(목표)과 전망(속보), 실적을 한 눈에 볼 수 있는 객체로서
구분(계획/전망/실적), 사업종류(ERP, MES, CSP, MSP, SaaS, 기존사업), 사업부/담당/팀, 년월, 대내외 구분, 수주금액 으로 이루어져 있다. 
. 특정 시점에 각 사업부에서(현재는 전략마케팅실만) 상세데이터를 받아 단순히 이 객체에 밀어넣고
  리포트와 대시보드를 통해 조회할 예정</description>
    <label>사업부별 계획 전망 실적</label>
    <nameField>
        <label>계획 전망 실적 이름</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>사업부별 계획 전망 실적</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>