force-app/main/default/objects/Division_Plan_Forecast_Result__c/fields/Biz_Type__c.field-meta.xml
<CustomField>
    <fullName>Biz_Type__c</fullName>
    <description>사업의 종류</description>
    <label>Biz Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSP</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>SaaS</fullName>
            </value>
            <value>
                <fullName>ERP</fullName>
            </value>
            <value>
                <fullName>MES</fullName>
            </value>
            <value>
                <fullName>기존사업</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>