force-app/main/default/objects/Division_Plan_Forecast_Result__c/fields/DeliveryOrgLv3__c.field-meta.xml
<CustomField>
    <fullName>DeliveryOrgLv3__c</fullName>
    <label>Delivery Org Lv3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>