force-app/main/default/objects/Division_Plan_Forecast_Result__c/fields/External_Internal__c.field-meta.xml
<CustomField>
    <fullName>External_Internal__c</fullName>
    <label>External_Internal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>