force-app/main/default/objects/Division_Plan_Forecast_Result__c/fields/Gubun__c.field-meta.xml
<CustomField>
    <fullName>Gubun__c</fullName>
    <label>Gubun</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plan</fullName>
            </value>
            <value>
                <fullName>Forecast</fullName>
            </value>
            <value>
                <fullName>Result</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>