force-app/main/default/objects/Division_Plan_Forecast_Result__c/fields/Org_L2__c.field-meta.xml
<CustomField>
    <fullName>Org_L2__c</fullName>
    <description>보고 기준조직 Level 2</description>
    <label>Org L2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>