force-app/main/default/objects/Division_Plan_Forecast_Result__c/fields/ReportYear__c.field-meta.xml
<CustomField>
    <fullName>ReportYear__c</fullName>
    <formula>TEXT(YEAR(ReportDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Year</label>
    <type>Text</type>
</CustomField>